# voxel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile  old.txt  simple
.cache/clangd/index/: FastNoiseLite.h.CE8B1C91BF0C4082.idx  FastNoiseLite.h.F4304AC0D903C54D.idx  block.h.A7E61543501B336A.idx  block.h.F82056527B17519D.idx  camera.h.3825C7055E9D311A.idx  camera.h.8B6250F105B81720.idx  chunk.cc.1CA8A2AA3EE80D3C.idx  chunk.cc.8AD166408EB52898.idx  chunk.h.51059382A6387C19.idx  chunk.h.6B60D7082DA5E2E4.idx  chunker.h.068DC324F7DEBB6B.idx  chunker.h.8091461190F033BB.idx  engine.cc.0662CD23A2255C3F.idx  engine.cc.3B328629287B38F5.idx  engine.h.054B275F8EECA6C5.idx  engine.h.54C04DC9804ED950.idx  glad.c.946B0238D719A1E6.idx  glad.c.C485CDF85B492337.idx  glad.h.099040BA51DD916C.idx  glad.h.CDF8087223F72593.idx  globj.c.E68AD483A9748FFE.idx  globj.cc.0ACCB5415FFB3259.idx  globj.h.FACA13D9ADF1A1AB.idx  hud.h.528E40900558DA64.idx  hud.h.C2BFF509766111A5.idx  imconfig.h.60C38A3ACA08B0EF.idx  imconfig.h.D2D06E02188D5367.idx  imgui.cpp.3CFB17456FAD4246.idx  imgui.cpp.AC8F15BB04F69C3E.idx  imgui.h.62D3CB4E1E62CF42.idx  imgui.h.A0EA122E0631CDB4.idx  imgui_demo.cpp.A98E2F6DF70A79B5.idx  imgui_demo.cpp.EF509A8422ADC80D.idx  imgui_draw.cpp.D706EA2141E2FF51.idx  imgui_draw.cpp.E1F58D2086B603D5.idx  imgui_impl_glfw.cpp.0C78B37130970FF8.idx  imgui_impl_glfw.cpp.A70CE8F78D2B9C4E.idx  imgui_impl_glfw.h.AC3BCC414F6DF9B1.idx  imgui_impl_glfw.h.C35B1B2E68665CD7.idx  imgui_impl_opengl3.cpp.8AA83CAB4BCC23FA.idx  (+33 more)
src/: block.h  camera.h  chunk.cc  chunk.h  chunker.h  engine.cc  engine.h  fragment.glsl  glad.c  glad.h  globj.cc  globj.h  hud.h  main.cc  model.cc  model.h  obj.cc  obj.h  obj_fragment.glsl  obj_vertex.glsl  shader.cc  shader.hpp  textures.h  vertex.glsl
